-Added validate.php which is a hybrid controller/model. This should be abstracted when possible to a model/controller validate.php checks for safe inputs for image upload from artist pages. If the upload to DB works it should not even be visible. If something goes wrong it will display debug information. -Added modal uploadModalView.php to artist-page with input for file uploads. modal contains necessary fields, and gets artist id automatically. The submission on the form POSTs submitted data to validate.php -modified product-details.php so that the artist name is actually a link that will take you to the correct artists page -fixed file association issues and added some documentation

--- a/css/style.css
+++ b/css/style.css
@@ -1920,3 +1920,10 @@ ul.plan-details{
         padding: 2em 0;
     }
 }
+
+.btn.btn-default.btn-upload:focus,
+.btn.btn-default.btn-upload:active,
+.btn.btn-default.btn-upload:hover{
+    background-color: #008000;
+    color: #FFFFFF;
+}
